add RitchieBongoCursor asset

--- a/react-app/src/assets/images.scss
+++ b/react-app/src/assets/images.scss
@@ -3,6 +3,7 @@ $Kitch: "https://hooli-drive.sfo2.digitaloceanspaces.com/website/public/misc/kti
 $LogoDark: "https://hooli-drive.sfo2.digitaloceanspaces.com/website/public/misc/Logo_dark.png";
 $logoCardMeme: "https://hooli-drive.sfo2.digitaloceanspaces.com/website/public/misc/logo-card-meme.png";
 $RitchieBongo: "https://hooli-drive.sfo2.digitaloceanspaces.com/website/public/misc/RitchieBongo.svg";
+$RitchieBongoCursor: "https://hooli-drive.sfo2.digitaloceanspaces.com/website/public/assets/RitchieBongoCursor.png";
 $RITEsportsWordmarkLongGray: "https://hooli-drive.sfo2.digitaloceanspaces.com/website/public/misc/RITEsports_Wordmark_LongGray.svg";
 $RITEsportsWordmarkLongWhite: "https://hooli-drive.sfo2.digitaloceanspaces.com/website/public/misc/RITEsports_Wordmark_LongWhite.svg";
 $RITEsportsWordmarkStackedGray: "https://hooli-drive.sfo2.digitaloceanspaces.com/website/public/misc/RITEsports_Wordmark_StackedGray.svg";
