Added banner for profiles

--- a/react-app/src/assets/images.scss
+++ b/react-app/src/assets/images.scss
@@ -9,6 +9,7 @@ $RITEsportsWordmarkStackedGray: "https://hooli-drive.sfo2.digitaloceanspaces.com
 $RITEsportsWordmarkStackedWhite: "https://hooli-drive.sfo2.digitaloceanspaces.com/website/public/misc/RITEsports_Wordmark_StackedWhite.svg";
 $shopnow: "https://hooli-drive.sfo2.digitaloceanspaces.com/website/public/misc/shopnow.png";
 $merch2: "https://hooli-drive.sfo2.digitaloceanspaces.com/website/public/misc/Merch_2.png";
+$ritEsports8: "https://hooli-drive.sfo2.digitaloceanspaces.com/website/public/assets/RIT_ESPORTS_8.jpg";
 
 $controller: "https://hooli-drive.sfo2.digitaloceanspaces.com/website/public/teams/controller.jpg";
 $playerNoPhoto: "https://hooli-drive.sfo2.digitaloceanspaces.com/website/public/players/player-no-photo.png";
